package Client;

import Entity.Application;

public class Main {

    public static void main(String[] args) {

        Application app = new Application();
        app.launchApplication();

    }
}
