package Entity;

import java.util.HashSet;
import java.util.List;
import java.util.Set;

public class Movie extends Media{


    Movie(String title, String category, float rating, int releaseYear) {
        super(title, category, rating, releaseYear);
    }
}
