package Entity;

public class Serie extends Media {

    Serie(String title, String category, float rating, int releaseYear) {
        super(title, category, rating, releaseYear);
    }


}
