@startuml
'https://plantuml.com/class-diagram
!pragma layout smetana

'Client Package
package "Client class"{
class Main
}

'Utility Package
package "Utility classes"{
class UserInterface
class InputOutput
}

'Entity Package
package "Entity classes"{
class Movie
class Serie
class Application
class User
abstract Media
}

'Label on Relations !MANGLER
Application *-- UserInterface
Application *-- InputOutput
Application *-- User
Application *-- Media
Media <|-- Serie
Media <|-- Movie
InputOutput *-- Movie
InputOutput *-- Serie
Main *-- Application

'Class Methods & Attributes
Application : + void launchApplication()

User : - String name
User : - String userName
User : - String password
User : - List<User> userList
User : - String checkUserName(String userName)
User : - String checkPassword(String password)
User : + User(String name, String userName, String password)
User : + void addUserToList(User user)
User : + String getName()
User : + String getUserName()
User : + String getPassword()
User : + (List<User> userList) getUserList()
User : + void changeName(String name)
User : + void changeUserName(String userName)
User : + void changePassword(String (password)
User : + void deleteFromList((List<User> userList)


InputOutput : - File file
InputOutput : - Scanner scan
InputOutput : + String readUserData (List<String>)
InputOutput : + String saveData (List<String>)

UserInterface : - Scanner scan = new Scanner (System.in)
UserInterface : + void displayMessage(String)
UserInterface : + String getInput(String)

Media : - Scanner scan = new Scanner (System.in)
Media : - String category
Media : - float rating
Media : - int releaseYear
Media : - String titel
Media : + Media(String title, String category, float rating, int releaseYear)
Media : + String getTitle()
Media : + String getCategory()
Media : + float getRating()
Media : + int getReleaseYear()

@enduml